// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicyDrawerLayout component enabled policy matches the snapshots 1`] = `
<div>
  <div
    data-testid="policy-summary"
  >
    <span
      data-testid="summary-text"
    >
      Summary
    </span>
  </div>
   
  <policy-info-row-stub
    data-testid="policy-type"
    label="Policy Type"
  >
    
    Scan Execution
  
  </policy-info-row-stub>
   
  <policy-info-row-stub
    label="Description"
  >
    <div
      data-testid="custom-description-text"
    >
      
      This policy enforces pipeline configuration to have a job with DAST scan
    
    </div>
  </policy-info-row-stub>
   
  <policy-info-row-stub
    label="Source"
  >
    <div
      data-testid="policy-source"
    >
      <span>
        This is a project-level policy
      </span>
    </div>
  </policy-info-row-stub>
   
  <policy-info-row-stub
    label="Status"
  >
    <div
      class="gl-text-green-500"
      data-testid="enabled-status-text"
    >
      <gl-icon-stub
        class="gl-mr-3"
        name="check-circle-filled"
        size="16"
      />
      Enabled
    
    </div>
  </policy-info-row-stub>
</div>
`;

exports[`PolicyDrawerLayout component not enabled policy matches the snapshots 1`] = `
<div>
  <div
    data-testid="policy-summary"
  >
    <span
      data-testid="summary-text"
    >
      Summary
    </span>
  </div>
   
  <policy-info-row-stub
    data-testid="policy-type"
    label="Policy Type"
  >
    
    Scan Execution
  
  </policy-info-row-stub>
   
  <policy-info-row-stub
    label="Description"
  >
    <div
      class="gl-text-gray-500"
      data-testid="default-description-text"
    >
      
      No description
    
    </div>
  </policy-info-row-stub>
   
  <policy-info-row-stub
    label="Source"
  >
    <div
      data-testid="policy-source"
    >
      <span>
        This is a project-level policy
      </span>
    </div>
  </policy-info-row-stub>
   
  <policy-info-row-stub
    label="Status"
  >
    <div
      class="gl-text-gray-500"
      data-testid="not-enabled-status-text"
    >
      
      Not enabled
    
    </div>
  </policy-info-row-stub>
</div>
`;
